--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -64,6 +64,19 @@
         </script>
         <!-- Start loading toc.js asap -->
         <script src="{{ resource "toc.js" }}"></script>
+
+        
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MNG8GZ4ZWB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MNG8GZ4ZWB');
+</script>
+
+
     </head>
     <body>
     <div id="mdbook-help-container">
