--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -64,18 +64,16 @@
         </script>
         <!-- Start loading toc.js asap -->
         <script src="{{ resource "toc.js" }}"></script>
-
         
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MNG8GZ4ZWB"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P9GR4GX7BY"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-MNG8GZ4ZWB');
+  gtag('config', 'G-P9GR4GX7BY');
 </script>
-
 
     </head>
     <body>
